<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LLDeleteEvent">

        <Button
            android:id="@+id/btnCancel"
            style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/btnDelete"
            style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/delete" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LLDeleteEvent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txVDeleteEvent">

        <CheckBox
            android:id="@+id/rdBNormalEvents"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/normal_events" />

        <CheckBox
            android:id="@+id/rdBImportEvents"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/import_events" />

        <CheckBox
            android:id="@+id/rdBHolidayEvents"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/holiday_events" />

        <CheckBox
            android:id="@+id/rdBRegularEvents"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/regular_lecture" />
    </LinearLayout>

    <TextView
        android:id="@+id/txVDeleteEvent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingTop="5dp"
        android:paddingRight="10dp"
        android:paddingBottom="5dp"
        android:text="@string/which_events_do_you_want_to_delete"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>