<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="Alarm">
        <SwitchPreference
            android:defaultValue="false"
            android:key="ALARM_ON"
            android:title="@string/create_alarm_for_the_next_day" />
        <SwitchPreference
            android:defaultValue="false"
            android:enabled="false"
            android:key="ALARM_PHONE"
            android:title="@string/alarm_in_phone_watch_app" />
        <SwitchPreference
            android:defaultValue="false"
            android:enabled="false"
            android:key="ALARM_CHANGE"
            android:title="@string/change_alarm_if_lecture_is_changing" />
    </PreferenceCategory>

    <PreferenceCategory app:title="Import">
        <Preference
            android:key="IMPORT"
            app:title="Import" />
        <SwitchPreference
            android:defaultValue="false"
            android:key="AUTO_IMPORT"
            android:title="Automatic import" />
        <Preference
            android:key="IMPORT_DELETE_ALL"
            app:title="Delete all Import events" />
    </PreferenceCategory>

</PreferenceScreen>